[tool.poetry]
name = "Chess_diagram_to_FEN"
version = "0.0.2"
authors = [
    "Jost Triller <tsoj.tsoj@gmx.de>",
]
description = "Convert images of chess diagrams into FENs"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.8.4"
scikit-image = "0.22.0"
python-chess = "1.999"

[tool.poetry.dev-dependencies]
pyfastnoisesimd = "0.4.2"
cairosvg = "2.7.1"
tqdm = "4.66.1"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Chess_diagram_to_FEN"
version = "0.0.2"

[project.urls]
Homepage = "https://github.com/tsoj/Chess_diagram_to_FEN"
Issues = "https://github.com/tsoj/Chess_diagram_to_FEN/issues"
